load("@rules_cc//cc:defs.bzl", "cc_library")

genrule(
    name = "generate_export_header",
    srcs = [],
    outs = ["include/faker-cxx/export.h"],
    cmd = """
        echo "#pragma once" > $@
        echo "#define FAKER_CXX_EXPORT" >> $@
    """,
)

genrule(
    name = "generate_version_header",
    srcs = [],
    outs = ["include/faker-cxx/version.h"],
    cmd = """
        echo "#pragma once" > $@
        echo '#define FAKER_CXX_VERSION_MAJOR 3' >> $@
        echo '#define FAKER_CXX_VERSION_MINOR 0' >> $@
        echo '#define FAKER_CXX_VERSION_PATCH 0' >> $@
        echo '#define FAKER_CXX_VERSION "3.0.0"' >> $@
    """,
)

cc_library(
    name = "faker-cxx",
    srcs = glob(["src/**/*.cpp"]),
    hdrs = glob(["src/**/*.h", "include/**/*.h"]) + [":generate_export_header"] + [":generate_version_header"],
    includes = ["include", "src"],
    visibility = ["//visibility:public"],
    copts = select({
        "//conditions:default": [
            "-std=c++20"
        ],
        "@platforms//os:windows": [
            "/std:c++20",
        ],
    }),
)
