load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "faker-cxx-basic-example",
    srcs = ["basic/main.cpp",],
    deps = ["//src:faker-cxx",],
    copts = select({
        "//conditions:default": [
            "/std:c++20"
        ],
        "@platforms//os:windows": [
            "/std:c++20",
        ],
    }),
)

cc_binary(
    name = "faker-cxx-person-example",
    srcs = ["person/main.cpp",],
    deps = ["//src:faker-cxx",],
    copts = select({
        "//conditions:default": [
            "/std:c++20"
        ],
        "@platforms//os:windows": [
            "/std:c++20",
        ],
    }),
)