load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "faker-cxx",
    srcs = glob(["**/*.cpp"]),
    hdrs = glob(["**/*.h"]),
    includes = ["$(location BUILD.bazel)/../include", "$(location BUILD.bazel)"],
    visibility = ["//visibility:public"],
    deps = ["@fmt//:fmt"],
    copts = select({
        "//conditions:default": [
            "-std=c++20"
        ],
        "@platforms//os:windows": [
            "/std:c++20",
        ],
    }),
)
