load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_test(
    name = "faker-cxx-ut",
    srcs = glob(["**/*.cpp"]),
    deps = ["//:faker-cxx", "@googletest//:gtest_main"],
    includes = ["../src/common", "../src/modules"],
    copts = select({
        "//conditions:default": [
            "-std=c++20"
        ],
        "@platforms//os:windows": [
            "/std:c++20",
        ],
    }),
)
